# Intel-Project

./: .gitignore  final ppt.pptx
ImageEncryptor/: CMakeLists.txt  CertificateManager.cpp  CertificateManager.h  CryptoManager.cpp  CryptoManager.h  ImageEncryptor.sln  ImageEncryptor.vcxproj  ImageEncryptor.vcxproj.filters  ImageProcessor.cpp  ImageProcessor.h  certificate.pem  encrypted.enc  main.cpp  private_key.pem
